[package]
name = "fraction"
version = "1.0.0"
authors = ["Blake Ramsdell <blaker@gmail.com>"]
edition = "2018"

[[test]]
name = "cucumber"
harness = false # Allows Cucumber to print output instead of libtest

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
cucumber_rust = { git = "https://github.com/bbqsrc/cucumber-rust", branch = "main" }
tokio = { version = "1.2.0", features = ["rt-multi-thread", "macros", "time"] }
